# python-docx

./: .gitignore  pyproject.toml
src/docx/: table.py
src/docx/oxml/: __init__.py  simpletypes.py  table.py
