[tool.poetry]
name = "docx"
version = "0.1.0"
description = "Create, read, and update Microsoft Word .docx files."
readme = "README.md"
packages = [{include = "src/docx"}]
authors = [
    "Steve Canny <stcanny@gmail.com>",
    "Nathan Nayda <ntnayda@secondpillar.com>",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^5.2.1"
typing-extensions = "^4.11.0"
statsmodels = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
